--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimun-scale=1,maximun-scale=1,user-scalable=no">
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <title></title>
+  <meta name="keywords" content="online,nginx.conf,format,在线,格式化">
+  <meta name="description" content="online format nginx.conf,在线格式化nginx配置文件">
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>online format nginx.conf-在线格式化nginx配置文件</title>
   <style>
   .content {
     width: 100%;
@@ -40,14 +41,14 @@
 
 <body>
   <div class="content">
-    <h1>Format Nginx.conf</h1>
+    <h1>Online Format Nginx.conf</h1>
     <div class="box">
       <form enctype="multipart/form-data" method="post">
         <input name="file" type="file">
         <input type="submit" value="format">
       </form>
     </div>
-    <label>support charset : utf-8</label>
+    <label>Support Charset : utf-8</label>
   </div>
 </body>
 
